fixed logo sizing and about me overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@ a#github, a#linkedin, a#twitter {
 	padding-top: 70px;
 	height: 300px;
 	padding-top: 100px;
+	width: 100%; 
 	background-color: rgba(247,206,62, 0.5);
 	color: #0A1612;
 	font-family: 'Ranga', sans-serif;
@@ -84,16 +85,17 @@ a#github, a#linkedin, a#twitter {
 }
 .aboutCon{
 	height: 450px;
-	padding-top: 50px
+	padding-top: 50px;
+	overflow: scroll;
 }
 .profile{
 	padding-top: 50px;
 }
-.projectImg{
-	height: 250px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 70px;
+#trail{
+	height: 100px;
+	width: 250px;
+	margin-top: 75px;
+	margin-bottom: 75px;
 }
 .projectContent{
 	height: 600px;
@@ -104,6 +106,7 @@ a#github, a#linkedin, a#twitter {
 }
 .projectCaption{
 	color: #C5C1C0;
+	font-family: 'Raleway', cursive;
 }
 
 
